[package]
name = "anyrun-bluetooth"
description = "Plugin to connect/disconnect bluetooth devices"
version = "0.1.0"
edition = "2021"
author = "Magnitudex"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abi_stable = "0.11.1"
anyrun-plugin = "0.1.0"
bluer = { version = "0.17.0", features = ["full"] }
ron = "0.8.0"
serde = { version = "1.0.159", features = ["derive"] }
sublime_fuzzy = "0.7.0"
